# research-assistant

./: .gitignore  AGENTS.md  DEPLOYMENT.md  HANDOFF.md  HANDOFF_DEV_B.md  MARGINALIA_EXPANSION_ARCHITECTURE_AND_DEV_SPLIT (1).md  PROJECT_SPEC_1.md  SHIP_PLAN.md
.playwright-mcp/: page-2026-07-21T07-55-54-175Z.yml  page-2026-07-21T07-56-40-040Z.yml  page-2026-07-21T07-57-10-187Z.yml  page-2026-07-21T07-58-20-502Z.yml  page-2026-07-21T07-58-27-127Z.yml
apps/api/: .dockerignore  .env.example  Dockerfile  blob_store.py  main.py  pyproject.toml
apps/api/extract/: __init__.py  __main__.py  arxiv.py  captions.py  figures.py  geometry.py  ingest.py  manifest.py  references.py  sections.py  tabular.py  textnorm.py
apps/api/tests/: conftest.py  test_api.py  test_arxiv.py  test_arxiv_ids.py  test_blob_store.py  test_captions.py  test_deployment_api.py  test_figures.py  test_geometry.py  test_ingest.py  test_references.py  test_sections.py  test_tabular.py  test_textnorm.py
apps/web/: .env.example  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/components/: IngestForms.tsx  OverlayCard.test.ts  OverlayCard.tsx  PdfPageView.tsx  Reader.tsx
apps/web/lib/: api.ts  manifest.ts  mentions.test.ts  mentions.ts  paper-route.test.ts  paper-route.ts  pdf.ts
apps/web/scripts/: visual-qa.ts
docs/superpowers/plans/: 2026-07-21-author-method-networks.md  2026-07-21-paper-map.md  2026-07-21-pinboard-comparison.md  (+1 more)
supabase/: config.toml
supabase/migrations/: 20260722000000_create_marginalia_papers_bucket.sql
(+46 files in other folders)
