[project]
name = "marginalia-api"
version = "0.1.0"
description = "Marginalia extraction pipeline and API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Makes `extract` importable without installing the project (uv treats this as a
# virtual project, so there is no build step to put it on sys.path).
pythonpath = ["."]
asyncio_mode = "auto"
